feat(storage): fase 1 estabilizacion - compilacion y flujo funcional
- Añade dependencias Spring Cloud (openfeign, eureka-client) y oauth2-client
- Alinea el dominio con el paradigma reactivo (Mono en StorageService)
- Reconstruye createUploadSession: reserva atómica de cuota, persistencia
  del StoreObject y generación de la URL presignada
- Reconstruye completeUpload con markCompleted atómico en BD
- Corrige SQL de repositorios (tablas/columnas equivocadas por copy-paste)
- Crea migración Flyway V1 con el esquema store_objects y user_storage
- Corrige MinioStorage: bucketExists devolvía siempre true, NPE de headers
- Unifica estado del objeto (StorageSessionStatus), elimina código muerto
  (UploadId, StorageObjectStatus, MetadataAttributesConverter JPA)
- Renombra InvalidObjectCopntentError -> InvalidObjectContentError